# simon-cheng

./: .gitignore  .pnp.js  Cargo.toml  Dioxus.toml  README.md  index.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.yarn/: build-state.yml
assembly/: index.ts
public/: tailwind.css
public/img/: home-bg.avif
src/: index.html  index.ts  layout.rs  main.rs
src/assembly/: index.ts  tsconfig.json
src/assets/fonts/: stylesheet.css
src/components/: mod.rs  navbar.rs  title.rs
src/enums/: route.rs
src/pages/: about_me.rs  layout.rs  mod.rs  page_not_found.rs  portfolio.rs  projects.rs
src/pages/home/: home.html  home.less  home.ts
src/wasm/: index.ts
src/wasm/assembly/: index.ts  tsconfig.json
tests/: index.js
