[package]
name = "simon-cheng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git" }
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus.git" }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus.git" }
serde = "1.0.193"
